# aoc-2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  gen_day.ml  run.sh
common/: CMakeLists.txt  aoc_common.hpp
day01/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt  main.cpp
day07/: CMakeLists.txt  main.cpp
day08/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt  main.cpp
